--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "server": "json-server --watch data/cities.json --port 9000"
   },
   "dependencies": {
+    "json": "^11.0.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "server": "^1.0.41"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
